# todo-app

./: .gitignore  Cargo.toml  Dockerfile  build.sh  docker-compose.yml
.github/workflows/: ci.yml
crates/todo-frontend/: Cargo.toml  Trunk.toml  index.html
crates/todo-frontend/src/: api.rs  app.rs  main.rs  speech.rs  ws.rs
crates/todo-frontend/src/components/: add_todo.rs  all_view.rs  archive_view.rs  mod.rs  quadrant.rs  section_tabs.rs  section_view.rs  todo_item.rs  todo_list.rs
crates/todo-frontend/style/: main.css
crates/todo-server/: Cargo.toml
crates/todo-server/src/: broadcast.rs  db.rs  describe.rs  handlers.rs  main.rs  models.rs
crates/todo-shared/: Cargo.toml
crates/todo-shared/src/: lib.rs
