[package]
name = "todo-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
todo-shared = { path = "../todo-shared" }
leptos = { version = "0.6", features = ["csr"] }
gloo-net = { version = "0.5", features = ["http"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["HtmlInputElement"] }
console_log = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
